--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
     "@uploadthing/react": "^7.3.3",
+    "@upstash/ratelimit": "^2.0.6",
+    "@upstash/redis": "^1.35.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "isomorphic-dompurify": "^2.30.1",
     "lucide-react": "^0.545.0",
     "next": "14.2.15",
     "next-themes": "^0.4.6",
